--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
   box-sizing: border-box;
 }
 
-/* ========General Styling======== */
+/* ======== General Styling ======== */
 
 body {
   font-family: 'Space Grotesk', sans-serif;
   background: #151515;
   color: #fff;
-  min-width: 1240px;
-  /* padding: 0 2rem 2rem 2rem; */
+  min-width: 1250px;
 }
 
 ul {
@@ -30,7 +29,7 @@ ul li a:hover {
   padding-left: 1.5rem;
 }
 
-/* ========Header Styling======== */
+/* ======== Header Styling Starts ======== */
 
 .header {
   padding: 0 4rem 2rem 4rem;
@@ -48,11 +47,9 @@ ul li a:hover {
 }
 
 .hero {
-  /* justify-self: center; */
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  /* flex-wrap: wrap; */
 }
 
 .heading {
@@ -112,9 +109,12 @@ button:hover {
   height: 720px;
 }
 
-/*=== Main Styling======*/
+/* ======== Header Styling Ends ======== */
+
+/*=========== Main Styling Starts ======*/
+
 .main {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Space Grotesk', sans-serif;
   padding: 0 4rem 2rem 4rem;
 }
 
@@ -165,6 +165,71 @@ button:hover {
   gap: 1rem;
 }
 
+.project-content-link ul li a {
+  color: #bbb;
+}
+
+.project {
+  display: grid;
+  grid-column: 2fr auto;
+}
+
+.project-content-img {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  flex: 3;
+}
+
+.project-content-img:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-link {
+  color: #555;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.img-link ul {
+  display: grid;
+  gap: 2rem;
+}
+
+.img-link a {
+  color: #fff;
+  border-bottom: 2px solid #49c293;
+}
+
+.img-link a:hover {
+  color: #49c293;
+}
+
+.project-content-img:hover .img-link {
+  visibility: visible; /* Show the text when hovering over the container */
+  opacity: 1; /* Make the text fully opaque on hover */
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  opacity: 0; /* Initially invisible */
+  transition: opacity 2s ease; /* Smooth transition for the hover effect */
+}
+
+.project-content-img:hover .image-overlay {
+  opacity: 1;
+}
+
 .project-code ul {
   display: flex;
   gap: 1rem;
@@ -177,17 +242,15 @@ button:hover {
 }
 
 .project-img {
-  width: 540px;
-  height: 487px;
-  transition: padding 2s ease;
+  width: 100%;
 }
 
 .project-img:hover {
   cursor: pointer;
-  padding-bottom: 2rem;
 }
+/*=========== Main Styling Ends======*/
 
-/*=== footer Styling======*/
+/*========= footer Styling Starts ======*/
 
 .footer {
   background: #242424;
@@ -209,6 +272,10 @@ button:hover {
 
 .contact-text > h2 {
   font-size: 4rem;
+}
+
+.contact-text > p {
+  color: #bbb;
 }
 
 .info {
@@ -238,10 +305,6 @@ input:not(:focus) {
 input:valid {
   border-bottom-color: green;
 }
-
-/* input:invalid:required {
-  border-bottom-color: red;
-} */
 
 form > button {
   padding: 0.5rem;
@@ -274,10 +337,87 @@ form > button {
   font-size: 1.5rem;
 }
 
-@media (max-width: 768px) {
+/* ========MEDIA QUERY FOR MOBILE STARTS========= */
+
+@media screen and (max-width: 767px) {
+  .header {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, 1fr);
+    padding-bottom: 1rem;
+  }
+  .header-text-container {
+    grid-row: 2/3;
+    justify-self: center;
+    text-align: center;
+    margin-top: 5rem;
+    gap: 10rem;
+  }
+  .header-img-container {
+    grid-row: 1/2;
+    justify-self: center;
+  }
+  .name {
+    display: none;
+  }
+
+  .cv-container {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    border-bottom: 2px solid #ccc;
+  }
+
+  .project-content {
+    display: grid;
+    grid-template-columns: auto;
+    padding-bottom: 5rem;
+  }
+
+  .project-code ul li {
+    display: flex;
+    border-bottom: 2px solid #49c293;
+  }
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .footer-nav {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .icons {
+    position: absolute;
+    top: 2rem;
+    left: 30rem;
+    display: flex;
+    align-items: flex-end;
+    gap: 1rem;
+    z-index: 999;
+    font-size: 1.5rem;
+  }
+
+  .project-content-img:hover .img-link {
+    visibility: hidden; /* Show the text when hovering over the container */
+    opacity: 1; /* Make the text fully opaque on hover */
+  }
+}
+/* ========MEDIA QUERY FOR MOBILE ENDS========= */
+
+/* ========MEDIA QUERY FOR TABLETS STARTS========= */
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
   body {
     min-width: 800px;
-    /* padding: 0 2rem 2rem 2rem; */
+    justify-content: center;
   }
   .profile-img {
     width: 322px;
@@ -301,8 +441,9 @@ form > button {
   }
 
   .project-content {
-    grid-template-columns: repeat(2, 345px);
-    gap: 1rem;
+    grid-template-columns: repeat(2, auto);
+    gap: 3rem;
+    justify-content: center;
   }
 
   .project-img {
@@ -314,13 +455,19 @@ form > button {
     display: flex;
     gap: 1rem;
     border-bottom: 2px solid #49c293;
-    /* text-decoration: underline; */
   }
 
   .contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* max-width: 80vw; */
+    text-align: center;
+  }
+
+  .project-content-img:hover .img-link {
+    visibility: hidden; /* Show the text when hovering over the container */
+    opacity: 1; /* Make the text fully opaque on hover */
   }
 }
+
+/* ========MEDIA QUERY FOR MOBILE ENDS========= */
